# dory-chess

./: .gitignore  CMakeLists.txt  README.md  board.h  checklogichandler.cpp  checklogichandler.h  chess.h  fenreader.h  main.cpp  movecoll.h  movecollectors.h  movegen.h  piecesteps.h  utils.cpp  utils.h
.github/workflows/: cmake.yml  perft.yml
resources/: puzzles2000.txt  puzzlesSacrifices.txt
src/: board.h  checklogichandler.h  chess.h  dory.h  fenreader.h  input.txt  main.cpp  monte_carlo.h  movecollectors.h  movegen.h  piecesteps.h  random.h  uci.cpp  utils.cpp  utils.h  zobrist.h
src/core/: board.h  checklogichandler.h  chess.h  movecollectors.h  movegen.h  piecesteps.h
src/engine/: engine.h  engine_move_collector.h  engine_params.h  engineparams.h  evaluation.h  features.h  mc.h  monte_carlo.h  moveordering.h  search.h  tables.h
src/old/: movecollectors.h
src/utils/: fenreader.h  perft.h  piecesteps.h  random.h  timer.h  uci_controller.cpp  utils.h  zobrist.h
testing/: engineTest.cpp  moveGenerationTest.cpp  test.cpp
